<resources>
    <string name="app_name" translatable="false">TimeFixers</string>
    <string name="menu_play_button">Jouer</string>
    <string name="menu_settings_button">Options</string>
    <string name="menu_quit_button">Quitter</string>
    <string name="settings_title">Options</string>
    <string name="settings_music">Musique</string>
    <string name="settings_sound">Sons</string>
    <string name="settings_return_button">Retour</string>
    <string name="histoire_fragment_skip_button">Passer</string>
    <string name="jeu_1_avance_1">Question</string>
    <string name="jeu_1_avance_2">sur</string>
    <string name="jeu_1_timer">Temps restant</string>
    <string name="result_title">Résultats</string>
    <string name="result_score">Score :</string>
    <string name="result_retour">Retour au menu</string>
    <string name="result_empty">Sans réponse</string>
    <string name="selection_title">Choisissez un jeu</string>
    <string name="selection_retour">Retour</string>
    <string name="selection_description1">Choisis la bonne réponse à la question du professeur.</string>
    <string name="selection_description2">Fais glisser les objets ou personnages dans leurs periodes respectives.</string>
    <string name="selection_titre_1">Le Quizz du Professeur</string>
    <string name="selection_titre_2">Le jeu des anachronismes</string>
    <string name="consigneJeu2">Glissez l\'objet dans la bonne date.</string>
    <string name="jeu_2_avance_1">Question</string>
    <string name="jeu_2_avance_2">sur</string>
</resources>
