<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/settings_background"
tools:context="fr.ratslab.timefixers.ResultActivity">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/selection_title"
    android:id="@+id/selectionTitle"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="24dp"
    style="@style/selectionTitle"/>

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/selection_retour"
    android:id="@+id/selectionReturnButton"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:id="@+id/choixJeu1"
        android:src="@drawable/character2"
        android:paddingBottom="30dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/selectionTitle"
        android:layout_alignStart="@+id/textView8"
        android:layout_marginStart="62dp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:id="@+id/choixJeu2"
        android:src="@drawable/character1"
        android:paddingBottom="30dp"
        android:layout_above="@+id/textView8"
        android:layout_alignStart="@+id/textView9"
        android:layout_marginStart="63dp" />

    <TextView
        android:layout_width="230dp"
        android:layout_height="100dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/selection_description1"
        android:id="@+id/textView5"
        style="@style/selectionDescription"
        android:textAlignment="center"
        android:layout_below="@+id/textView8"
        android:layout_toStartOf="@+id/selectionReturnButton"
        android:layout_above="@+id/selectionReturnButton" />

    <TextView
        android:layout_width="230dp"
        android:layout_height="100dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/selection_description2"
        android:id="@+id/textView7"
        style="@style/selectionDescription"
        android:textAlignment="center"
        android:layout_below="@+id/textView9"
        android:layout_toEndOf="@+id/selectionReturnButton"
        android:layout_above="@+id/selectionReturnButton" />

    <TextView
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textAlignment="center"
        android:text="@string/selection_titre_1"
        android:id="@+id/textView8"
        style="@style/resultListText"
        android:layout_below="@+id/choixJeu1"
        android:layout_alignStart="@+id/textView5"
        android:layout_alignEnd="@+id/textView5" />

    <TextView
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textAlignment="center"
        android:text="@string/selection_titre_2"
        android:id="@+id/textView9"
        style="@style/resultListText"
        android:layout_below="@+id/choixJeu2"
        android:layout_alignStart="@+id/textView7" />
</RelativeLayout>
