<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/menu_background"
    tools:context="fr.ratslab.timefixers.MainActivity">

    <ImageView
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:id="@+id/menuLogo"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_quit_button"
        android:id="@+id/menuQuitButton"
        android:layout_marginBottom="26dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_settings_button"
        android:id="@+id/menuSettingsButton"
        android:layout_above="@+id/menuQuitButton"
        android:layout_alignStart="@+id/menuQuitButton" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_play_button"
        android:id="@+id/menuPlayButton"
        android:layout_above="@+id/menuSettingsButton"
        android:layout_alignStart="@+id/menuSettingsButton" />

</RelativeLayout>
